# routes/gardenerContacts.js
@@ -6,19 +6,14 @@ const contactsController = require('../controllers/gardenerContacts');
 
 //routes.get('/', contactsController.getData);
 
-//#Garden-Contacts
 routes.get('/', contactsController.getAll);
 
-//#Garden-Contacts
-routes.get('contacts:id', contactsController.getSingle);
+routes.get('contacts:id', contactsController.getSingle);  // change 5/10/23 contacts:id
 
-//#Garden-Contacts
 routes.post('/', validation.saveContact, contactsController.createContact);
 
-//#Garden-Contacts
 routes.put('/:id', contactsController.updateContact);
 
-//#Garden-Contacts
 routes.delete('/:id', contactsController.deleteContact);
 
 module.exports = routes;
