# routes/index.js
@@ -7,7 +7,7 @@ routes.use('/', require('./swagger'));
 //routes.use('/templess', require('./temples'));
 routes.use('flowers', require('./flowers'));
 //routes.use('validator', require('./validator') )
-routes.use('gardenerContacts', require('./gardenerContacts'))
+routes.use('contacts', require('./gardenerContacts'))
 
 routes.use(
   '/',
