# swagger.json
@@ -18,8 +18,7 @@
         "responses": {}
       }
     },
-    //#Flowers
-    "/flowers": {
+      "/flowers": {
       "get": {
         "description": "",
         "produces": [
@@ -203,8 +202,7 @@
         }
       }
     },
-    //#Gardeners 
-    "contacts": {
+    "/contacts": {
       "get": {
         "description": "",
         "produces": [
